tests/predator-regre/test-0202.err
test-0202.c:9:20: note: writing heap graph to '01-continuous-range-0000.dot'...
test-0202.c:12:20: note: writing heap graph to '02-aligned-0000.dot'...
test-0202.c:16:20: note: writing heap graph to '03-pseudo-aligned-0000.dot'...
test-0202.c:17:5: error: ___sl_error() reached, analysis of this code path will not continue
test-0202.c:17:5: note: user message: assertion failed: !(i & 0x6)
